--- a/HTML - Personal Site/contactdetails.html
+++ b/HTML - Personal Site/contactdetails.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact Details</title>
-  </head>
-  <body>
-    <h3>Let's work together!</h3>
-    <p>saralutes@gmail.com</p>
-    <a href="www.linkedin.com/in/sara-lutes-93b847176">Linkedin Profile</a>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact Details</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    h1 {
+      color: #FC997C;
+      font-family: cursive, garamond, sans-serif;
+      font-weight: lighter;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Let's work together!</h1>
+  <p>saralutes@gmail.com</p>
+  <a href="www.linkedin.com/in/sara-lutes-93b847176">Linkedin Profile</a>
+  <br>
+  <a href="https://www.facebook.com/sara.lutes">Facebook Profile</a>
+  <br>
+  <a href="https://www.instagram.com/grlcky/">Instagram</a>
+  <h4>Send me a message</h4>
+  <form action="mailto:saralutes@gmail.com" method="post" enctype="text/plain">
+    <label for="">Your Name:</label>
+    <input type="text" name="" value="">
     <br>
-    <a href="https://www.facebook.com/sara.lutes">Facebook Profile</a>
+    <label for="">Your Email:</label>
+    <input type="email" name="" value="">
     <br>
-    <a href="https://www.instagram.com/grlcky/">Instagram</a>
-  </body>
+    <label for="">Your Message:</label>
+    <br>
+    <textarea name="Your-Message" rows="10" cols="30"></textarea>
+    <br>
+    <input type="submit">
+  </form>
+</body>
+
 </html>
