--- a/HTML - Personal Site/myhobbies.html
+++ b/HTML - Personal Site/myhobbies.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <style>
+      h1 {
+        color: #FC997C;
+        font-family: cursive, garamond, sans-serif;
+        font-weight: lighter;
+      }
+    </style>
   </head>
   <body>
-    <h3>My Hobbies</h3>
+    <h1>My Hobbies</h1>
     <ol>
       <li>Yoga</li>
       <li>Travel</li>
