--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -8,24 +8,31 @@
   <meta charset="utf-8">
   <!--meta data, selects character set-->
   <title>Sara Lutes Personal Site</title> <!-- title of website for the browser-->
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-  <img src="https://drive.google.com/thumbnail?id=1VhkH108q6VKOuEaBKVSOKynGYhrKMhbf" alt="Sara Lutes profile picture">
-  <h1>Sara Lutes</h1>
-  <p><em>Educator and Web Developer</em></p>
-  <p>Instructor at <a href="https://gpsed.org/">GPS Education Partners</a></p>
-  <a href="https://github.com/saralutes">Github</a>
-  <br>
-  <a href="https://codepen.io/saralutes">Codepen</a>
-  <br>
-  <h3><a href="contactdetails.html">Contact Me</a></h3>
-  <hr size="3">
-  <p>I am an educator and web developer. My work as an educator spanned a decade and included teaching social sciences, alternative education, and work-based learning programs. I began learning web development in 2021 and look forward to an exciting
+  <table cellspacing="15">
+    <tr>
+      <td><img src="https://drive.google.com/thumbnail?id=1VhkH108q6VKOuEaBKVSOKynGYhrKMhbf" alt="Sara Lutes profile picture"></td>
+      <td>
+        <h1>Sara Lutes</h1>
+        <p><em>Web Developer and Educator</em></p>
+        <p>Instructor at <a href="https://gpsed.org/">GPS Education Partners</a></p>
+        <a href="https://github.com/saralutes">Github</a>
+        <br>
+        <a href="https://codepen.io/saralutes">Codepen</a>
+      </td>
+    </tr>
+  </table>
+  <h2><a href="contactdetails.html">Contact Me</a></h2>
+  <hr>
+  <p>I am a web developer and educator. My work as an educator spanned a decade and included teaching social sciences, alternative education, and work-based learning programs. I began learning web development in 2021 and look forward to an exciting
     career creating websites that are both beautiful and functional.</p>
   <p>I love coffe, dogs, and supporting local business and community based organizations.</p>
   <hr size="3">
-  <h3>Education</h3>
+  <h2>Education</h2>
   <ul>
     <li>The Complete 2022 Web Development Bootcamp</li>
     <ul>
@@ -37,15 +44,93 @@
     </ul>
     <li>Alternative Education Certification</li>
     <ul>
-      <li><a href="https://uwm.edu/education/academics/alternative-edu/">University of Wisconsin - Milwaukee</a> 2014</li>
+      <li><a href="https://uwm.edu/education/academics/alternative-edu/">University of Wisconsin - Milwaukee</a> 2015</li>
     </ul>
     <li>B.A. Social Science Education</li>
     <ul>
       <li><a href="https://www.alverno.edu/Program/Education">Alverno College</a> 2012</li>
     </ul>
   </ul>
-  <hr size="3">
-  <h3><a href="myhobbies.html">Hobbies</a></h3>
+  <hr>
+  <h2>Skills</h2>
+  <table cellspacing="10">
+    <thead>
+    </thead>
+    <tbody>
+      <tr>
+        <td>HTML5</td>
+        <td>⭐⭐⭐⭐</td>
+        <td>Javascript</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>⭐⭐⭐⭐</td>
+        <td>Training</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Project Management</td>
+        <td>⭐⭐⭐</td>
+        <td>Content Creation</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Team Management</td>
+        <td>⭐⭐⭐⭐</td>
+        <td>Curriculum Development</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+  </table>
+  <hr>
+  <h2>Work Experience</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2020-Present</td>
+        <td>Instructor - GPS Education Partners</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td>AP Psychology Test Rater - College Board</td>
+      </tr>
+      <tr>
+        <td>2017-2020</td>
+        <td>Social Studies Teacher and Department Head- Dodgeland High School</td>
+      </tr>
+      <tr>
+        <td>2016</td>
+        <td>Presenter - Wisconsin PBIS Network</td>
+      </tr>
+      <tr>
+        <td>2015-2017</td>
+        <td>Alternative Education Teacher - Dottke H.S. West Allis West Milwaukee SD</td>
+      </tr>
+      <tr>
+        <td>2014-2015</td>
+        <td>Alternative Education Teacher - Lad Lake</td>
+      </tr>
+      <tr>
+        <td>2013-2015</td>
+        <td>Crew Member - Trader Joes</td>
+      </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+  </table>
+  <hr>
+  <h2><a href="myhobbies.html">Hobbies</a></h2>
 
 </body>
 
